[gd_scene load_steps=2 format=3 uid="uid://cmvgqyp6y7tit"]

[ext_resource type="Script" path="res://scripts/GameBoard.gd" id="1_0s2wf"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0s2wf")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 800.0
offset_bottom = 600.0
color = Color(0, 0, 0, 1)

[node name="GameBoard" type="Node2D" parent="."]

[node name="PathRenderer" type="Node2D" parent="GameBoard"]

[node name="Obstacles" type="Node2D" parent="GameBoard"]

[node name="Food" type="ColorRect" parent="GameBoard"]
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 0, 0, 1)

[node name="Snake" type="Node2D" parent="GameBoard"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="TimerLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 18
text = "Path appears in: 5s"

[node name="DebugLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 16
text = ""

[node name="MenuContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="ObstacleMenu" type="VBoxContainer" parent="UI/MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = 40.0

[node name="ObstacleTitle" type="Label" parent="UI/MenuContainer/ObstacleMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Enable obstacles? Press Y for Yes, N for No"
horizontal_alignment = 1

[node name="SpeedMenu" type="VBoxContainer" parent="UI/MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
visible = false

[node name="SpeedTitle" type="Label" parent="UI/MenuContainer/SpeedMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose Speed:"
horizontal_alignment = 1

[node name="Speed1" type="Label" parent="UI/MenuContainer/SpeedMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1. Slow"
horizontal_alignment = 1

[node name="Speed2" type="Label" parent="UI/MenuContainer/SpeedMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "2. Medium"
horizontal_alignment = 1

[node name="Speed3" type="Label" parent="UI/MenuContainer/SpeedMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "3. Fast"
horizontal_alignment = 1

[node name="GameOverMenu" type="VBoxContainer" parent="UI/MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
visible = false

[node name="GameOverText" type="Label" parent="UI/MenuContainer/GameOverMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Game Over! Press R to restart, S for settings, or ESC to quit"
horizontal_alignment = 1